[package]
name = "tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
toml = "0.5"
shellexpand = "3.1.0"
chrono= { version = "0.4", features = ["serde"]}
clap = { version = "4.5.7", features = ["derive", "color", "help", "usage", "error-context", "suggestions"] }
fuzzy_finder = "0.4.1"
serde_yml = "0.0.10"
rand = "0.8.5"
